--- a/src/mibg3/Agent/AlienInfoAgent.form
+++ b/src/mibg3/Agent/AlienInfoAgent.form
@@ -49,6 +49,8 @@
                               <Component id="ansvarigAgentLabel" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="returnAlienAnsAgentLabel" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="rasLabel" min="-2" max="-2" attributes="0"/>
@@ -64,6 +66,8 @@
                               <Component id="nuvarandePlatsLabel" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="returnAlienNuvPlatsLabel" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="rasLabel1" min="-2" max="-2" attributes="0"/>
@@ -71,7 +75,7 @@
                               <Component id="returnArmBoogLabel" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace pref="70" max="32767" attributes="0"/>
+                      <EmptySpace pref="19" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Group type="102" alignment="1" attributes="0">
                               <Component id="ändraAgentField" max="32767" attributes="0"/>
@@ -184,6 +188,7 @@
                   <Component id="returnAlienAnsAgentLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="ändraAgent" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="ändraAgentField" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -191,6 +196,7 @@
                   <Component id="returnAlienNuvPlatsLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="ändraPlats" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="ändraPlatsField" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -514,6 +520,16 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Ej inloggad som Admin"/>
         <Property name="horizontalTextPosition" type="int" value="4"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jLabel2">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Ange ett nummer"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jLabel3">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Ange ett nummer"/>
       </Properties>
     </Component>
   </SubComponents>
